feat: Add choose template option

--- a/goreact/challenge3/.env.example
+++ b/goreact/challenge3/.env.example
@@ -1,2 +1,2 @@
 REACT_APP_MAPBOX_ACCESS_TOKEN=yourTokenHere
-REACT_APP_GITHUB_USER=yourGithubUser
+REACT_APP_GITHUB_USER=yourGithubUser(Ex.: lcnogueira)
