--- a/gonative/challenge2/package.json
+++ b/gonative/challenge2/package.json
@@ -8,9 +8,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.3.4",
+    "axios": "^0.18.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-native-gesture-handler": "^1.2.1",
+    "react-native-status-bar-height": "^2.3.1",
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
