--- a/gonative/challenge2/package.json
+++ b/gonative/challenge2/package.json
@@ -4,8 +4,7 @@
   "author": "Luiz Claudio <luizcns18@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.3.4",
