--- a/gonode/challenge4/package.json
+++ b/gonode/challenge4/package.json
@@ -29,6 +29,7 @@
     "@adonisjs/mail": "^3.0.9",
     "@adonisjs/redis": "^2.0.7",
     "@adonisjs/validator": "^5.0.6",
+    "@adonisjs/vow": "^1.0.17",
     "adonis-kue": "^5.0.1",
     "adonis-sentry": "^1.0.4",
     "moment": "^2.24.0",
