--- a/goreact/challenge4/.eslintrc.json
+++ b/goreact/challenge4/.eslintrc.json
@@ -13,6 +13,7 @@
     ],
     "import/prefer-default-export": "off",
     "react/jsx-one-expression-per-line": "off",
-    "react/no-access-state-in-setstate": "off"
+    "react/no-access-state-in-setstate": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
