--- a/gonative/challenge4/package.json
+++ b/gonative/challenge4/package.json
@@ -17,7 +17,10 @@
     "react-navigation": "^3.11.0",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.2",
+    "reduxsauce": "^1.1.0",
+    "seamless-immutable": "^7.1.4",
     "styled-components": "^4.2.1"
   },
   "devDependencies": {
