--- a/gonative/challenge4/.eslintrc.json
+++ b/gonative/challenge4/.eslintrc.json
@@ -24,7 +24,8 @@
     ],
     "import/prefer-default-export": "off",
     "no-use-before-define": "off",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "max-len": "off"
   },
   "settings": {
     "import/resolver": {
